macros/tests/ui/no_return.rs
#[macros::main]
fn kernel_main() {}

fn main() {}
